[workspace]
members = [
    "crates/codec",
    "crates/datalink",
    "crates/engine",
    "crates/py",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ivan Shurygin <shurygin1vs@gmail.com>"]

[workspace.dependencies]
sondare-codec    = { path = "crates/codec" }
sondare-datalink = { path = "crates/datalink" }
sondare-engine   = { path = "crates/engine" }

pnet            = "0.35"
pnet_datalink   = "0.35"
pnet_packet     = "0.35"
rustls          = "0.23"
x509-parser     = "0.16"
webpki-roots    = "0.26"
socket2         = { version = "0.5", features = ["all"] }
pcap            = "2"
