[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sondare"
version = "1.0.1"
description = "Probe and monitor local network hosts — ARP, ICMP, TCP, UDP, OS fingerprinting, and network graph."
requires-python = ">=3.10"
dependencies = [
    "scapy>=2.4.5",
    "psutil>=5.9.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sondare = "sondare.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sondare*"]

[tool.setuptools.package-data]
sondare = ["py.typed"]
