[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sondare"
version = "1.0.5"
description = "Probe and monitor local network hosts — ARP, ICMP, TCP, UDP, OS fingerprinting, and network graph."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Ivan Shurygin", email = "shurygin1vs@gmail.com"},
]
keywords = ["network", "scanner", "arp", "tcp", "udp", "icmp", "fingerprinting", "monitoring", "scapy", "cli"]
requires-python = ">=3.10"
dependencies = [
    "scapy>=2.4.5",
    "psutil>=5.9.5",
    "zeroconf>=0.38.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
]

[project.urls]
Repository = "https://github.com/w1ldy0uth/sondare"

[project.optional-dependencies]
dev = ["pytest>=8.0", "build>=1.0", "twine>=5.0"]

[project.scripts]
sondare = "sondare.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sondare*"]

[tool.setuptools.package-data]
sondare = ["py.typed"]
