[package]
name    = "sondare-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sondare-codec    = { workspace = true }
sondare-datalink = { workspace = true }
pnet_datalink    = { workspace = true }
rustls           = { workspace = true }
x509-parser      = { workspace = true }
webpki-roots     = { workspace = true }
socket2          = { workspace = true }
